--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,43 @@ CPT/*
 AGILE 2015 Central Places in Wikipedia alias
 
 .ipynb_checkpoints/parse-checkpoint.ipynb
+
+1000-1.txt
+
+1000-2.txt
+
+export-rego-park.sh
+
+insert-1-of-1000.sql
+
+insert-2-of-1000.sql
+
+insert-2-of-1000.sql
+
+16-13.txt
+
+insert-1-of-16.sql
+
+.com.apple.timemachine.supported
+
+CPTs.qgs
+
+CPTs.qgs~
+
+insert-1-of-4-coords.sql
+
+insert-2-of-4-coords.sql
+
+insert-3-of-4-coords.sql
+
+insert-4-of-4-coords.sql
+
+logfile-1-of-4.txt
+
+logfile-2-of-4.txt
+
+logfile-3-of-4.txt
+
+logfile-4-of-4.txt
+
+Wikipedia-WikiProjekt Georeferenzierung-Hauptseite-Wikipedia-World-en – Wikipedia.webloc
