Table "incoming links" added
Script added to create a table that calculates the total number of
incoming links. Plus some housekeeping.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,17 @@ logfile-3-of-4.txt
 logfile-4-of-4.txt
 
 Wikipedia-WikiProjekt Georeferenzierung-Hauptseite-Wikipedia-World-en – Wikipedia.webloc
+
+Exploring.qgs
+
+Exploring.qgs~
+
+insert-coordinates-pages-enwiki-20150515.sql
+
+PostGIS queries.txt
+
+nyc.sql
+
+PostGIS queries.txt
+
+PostGIS queries.txt
