--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,9 @@ DEM.qgs
 DEM.qgs~
 
 gdal-dem-invdist-2.0.tiff
+
+9.-Christaller-Loesch-Modell.ppt
+
+insert-1-of-1-coords.sql
+
+logfile-1-of-1.txt
