Python plots added

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,9 @@ AGILE 2015 Central Places in Wikipedia alias (iMac's conflicted copy 2016-04-20)
 *.qgs
 
 *.qgs~
+
+test.csv
+
+test.html
+
+test.sql
